--- a/res/default.latex
+++ b/res/default.latex
@@ -124,7 +124,7 @@ $description$
 \end{abstract}
 $endif$
 $if(brand)$
-\href{https://redtexts.org}{\emph{red texts: communist text files}}
+\href{https://marxists.xyz}{\emph{marxists.xyz}}
 $endif$
 
 $if(use-toc)$
